--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,6 +45,7 @@ jobs:
           context: ./simple-api
           # Note: tags has to be all lower-case
           tags:  ${{secrets.DOCKER_HUB_JULIA}}/devops-tp2:simple-api
+          push: ${{ github.ref == 'refs/heads/main' }}
 
       - name: Build image and push database
         uses: docker/build-push-action@v2 
@@ -53,6 +54,7 @@ jobs:
           context: ./database
           # Note: tags has to be all lower-case
           tags:  ${{secrets.DOCKER_HUB_JULIA}}/devops-tp2:database
+          push: ${{ github.ref == 'refs/heads/main' }}
 
       - name: Build image and push httpd
         uses: docker/build-push-action@v2 
@@ -61,4 +63,5 @@ jobs:
           context: ./httpd
           # Note: tags has to be all lower-case
           tags:  ${{secrets.DOCKER_HUB_JULIA}}/devops-tp2:httpd
+          push: ${{ github.ref == 'refs/heads/main' }}
 
