--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
 
       #finally build your app with the latest command
       - name: Build and test with Maven
-        run: mvn clean verify --file .simple-api/pom.xml
+        run: mvn clean verify --file simple-api/pom.xml
 
   # define job to build and publish docker image
   build-and-push-docker-image:
